--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             <img src="personal projects/inditech/INDITECH LOGO.png" alt="INDITECH Project">
             <h3>INDITECH</h3>
             <div class="tools">
-                <img src="---" alt="Tool 1" class="tool-icon">
-                <img src="---" alt="Tool 2" class="tool-icon">
+                <img src="personal projects/tools/sensors.png" alt="Tool 1" class="tool-icon">
+                <img src="personal projects/tools/arudino.webp" alt="Tool 2" class="tool-icon">
             </div>
         </div>
         <div class="popup" id="project1">
@@ -159,8 +159,8 @@
                 <p>Developed a system to prevent gas-related accidents, ensuring safety and reducing risks to life.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="---" alt="IoT" class="tool-icon">
-                    <img src="---" alt="Sensors" class="tool-icon">
+                    <img src="personal projects/tools/arudino.webp" alt="IoT" class="tool-icon">
+                    <img src="personal projects/tools/sensors.png" alt="Sensors" class="tool-icon">
                 </div>
                 <a href="personal projects/inditech/LPG AUTO PILOT @ INDITECH.pdf" download>Download PDF</a>
                 <a href="https://github.com/gurramankit/INDITECH" target="_blank">Visit GitHub</a>
@@ -172,8 +172,8 @@
             <img src="personal projects/parking indicator/Parking indicator.png" alt="Parking Indicator Project">
             <h3>PARKING INDICATOR</h3>
             <div class="tools">
-                <img src="--" alt="Tool 1" class="tool-icon">
-                <img src="--" alt="Tool 2" class="tool-icon">
+                <img src="personal projects/tools/raspberry py.png" alt="Tool 1" class="tool-icon">
+                <img src="personal projects/tools/arudino.webp" alt="Tool 2" class="tool-icon">
             </div>
         </div>
         <div class="popup" id="project2">
@@ -184,8 +184,8 @@
                 <p>Created a solution to help drivers easily locate available parking spaces in large car parks.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="---" alt="Aurdino" class="tool-icon">
-                    <img src="---" alt="Sensors" class="tool-icon">
+                    <img src="personal projects/tools/raspberry py.png" alt="Aurdino" class="tool-icon">
+                    <img src="personal projects/tools/sensors.png" alt="Sensors" class="tool-icon">
                 </div>
                 <a href="personal projects/parking indicator/parking pbl project.pptx" download>Download PPTX</a>
                 <a href="https://github.com/gurramankit/PARKINGINDICATOR" target="_blank">Visit GitHub</a>
@@ -197,8 +197,8 @@
             <img src="personal projects/smart helth watch/smart health watch.jpg" alt="Smart Health Watch Project">
             <h3>SMART HEALTH WATCH</h3>
             <div class="tools">
-                <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
+                <img src="personal projects/tools/sensors.png" alt="Tool 1" class="tool-icon">
+                <img src="my skills img/python.jpeg" alt="Tool 2" class="tool-icon">
             </div>
         </div>
         <div class="popup" id="project3">
@@ -209,8 +209,8 @@
                 <p>Built a wearable device that monitors patient health and sends updates to doctors for timely intervention.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="path/to/your/tool1_icon.png" alt="Python" class="tool-icon">
-                    <img src="path/to/your/tool2_icon.png" alt="Raspberry Pi" class="tool-icon">
+                    <img src="my skills img/python.jpeg" alt="Python" class="tool-icon">
+                    <img src="personal projects/tools/raspberry py.png" alt="Raspberry Pi" class="tool-icon">
                 </div>
                 <a href="path/to/your/smart_health_watch.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/smart-health-watch" target="_blank">Visit GitHub</a>
