--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             <img src="personal projects/inditech/INDITECH LOGO.png" alt="INDITECH Project">
             <h3>INDITECH</h3>
             <div class="tools">
-                <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
-                <img src="personal projects/tools/arudino.webp" style="width: 50px; height: 20px;" alt="tool-icon" class="tool-icon">
+                <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px; float: left;" alt="tool-icon" class="tool-icon">
+                <img src="personal projects/tools/arudino.webp" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
             </div>
         </div>
         <div class="popup" id="project1">
@@ -159,7 +159,7 @@
                 <p>Developed a system to prevent gas-related accidents, ensuring safety and reducing risks to life.</p>
                 <p>Tools:</p>
                 <div class="tools">
-                    <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
+                    <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px; float: left;" alt="tool-icon" class="tool-icon">
                     <img src="personal projects/tools/arudino.webp" style="width: 50px; height: 20px;" alt="tool-icon" class="tool-icon">
                 </div>
                 <a href="personal projects/inditech/LPG AUTO PILOT @ INDITECH.pdf" download>Download PDF</a>
