--- a/index.html
+++ b/index.html
@@ -146,10 +146,11 @@
         <div class="project-box" onclick="togglePopup('project1')">
             <img src="personal projects/inditech/INDITECH LOGO.png" alt="INDITECH Project">
             <h3>INDITECH</h3>
-            <div class="tools">
-                <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px; float: left;" alt="tool-icon" class="tool-icon">
-                <img src="personal projects/tools/arudino.webp" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
-            </div>
+            <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                 <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/arudino.webp" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
+           </div>
+
         </div>
         <div class="popup" id="project1">
             <div class="popup-content">
@@ -158,10 +159,11 @@
                 <img src="personal projects/inditech/WEB1.png" alt="INDITECH Project">
                 <p>Developed a system to prevent gas-related accidents, ensuring safety and reducing risks to life.</p>
                 <p>Tools:</p>
-                <div class="tools">
-                    <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px; float: left;" alt="tool-icon" class="tool-icon">
-                    <img src="personal projects/tools/arudino.webp" style="width: 50px; height: 20px;" alt="tool-icon" class="tool-icon">
-                </div>
+                <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                   <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
+                   <img src="personal projects/tools/arudino.webp" style="width: 50px; height: 20px; margin-left: 10px;" alt="tool-icon" class="tool-icon">
+               </div>
+
                 <a href="personal projects/inditech/LPG AUTO PILOT @ INDITECH.pdf" download>Download PDF</a>
                 <a href="https://github.com/gurramankit/INDITECH" target="_blank">Visit GitHub</a>
             </div>
