--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             <img src="personal projects/inditech/INDITECH LOGO.png" alt="INDITECH Project">
             <h3>INDITECH</h3>
             <div class="tools" style="display: flex; justify-content: center; align-items: center;">
-                 <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
-                 <img src="personal projects/tools/arudino.webp" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
            </div>
 
         </div>
@@ -160,8 +160,8 @@
                 <p>Developed a system to prevent gas-related accidents, ensuring safety and reducing risks to life.</p>
                 <p>Tools:</p>
                 <div class="tools" style="display: flex; justify-content: center; align-items: center;">
-                   <img src="personal projects/tools/sensors.png" style="width: 20px; height: 20px;" alt="tool-icon" class="tool-icon">
-                   <img src="personal projects/tools/arudino.webp" style="width: 50px; height: 20px; margin-left: 10px;" alt="tool-icon" class="tool-icon">
+                   <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                   <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px; margin-left: 10px;" alt="tool-icon" class="tool-icon">
                </div>
 
                 <a href="personal projects/inditech/LPG AUTO PILOT @ INDITECH.pdf" download>Download PDF</a>
@@ -173,10 +173,10 @@
         <div class="project-box" onclick="togglePopup('project2')">
             <img src="personal projects/parking indicator/Parking indicator.png" alt="Parking Indicator Project">
             <h3>PARKING INDICATOR</h3>
-            <div class="tools">
-                <img src="personal projects/tools/raspberry py.png" alt="Tool 1" class="tool-icon">
-                <img src="personal projects/tools/arudino.webp" alt="Tool 2" class="tool-icon">
-            </div>
+            <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+           </div>
         </div>
         <div class="popup" id="project2">
             <div class="popup-content">
@@ -185,10 +185,10 @@
                 <img src="personal projects/parking indicator/Parking indicator.png" alt="Parking Indicator Project">
                 <p>Created a solution to help drivers easily locate available parking spaces in large car parks.</p>
                 <p>Tools:</p>
-                <div class="tools">
-                    <img src="personal projects/tools/raspberry py.png" alt="Aurdino" class="tool-icon">
-                    <img src="personal projects/tools/sensors.png" alt="Sensors" class="tool-icon">
-                </div>
+                <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                   <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                   <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+             </div>
                 <a href="personal projects/parking indicator/parking pbl project.pptx" download>Download PPTX</a>
                 <a href="https://github.com/gurramankit/PARKINGINDICATOR" target="_blank">Visit GitHub</a>
             </div>
@@ -198,10 +198,10 @@
         <div class="project-box" onclick="togglePopup('project3')">
             <img src="personal projects/smart helth watch/smart health watch.jpg" alt="Smart Health Watch Project">
             <h3>SMART HEALTH WATCH</h3>
-            <div class="tools">
-                <img src="personal projects/tools/sensors.png" alt="Tool 1" class="tool-icon">
-                <img src="my skills img/python.jpeg" alt="Tool 2" class="tool-icon">
-            </div>
+            <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+           </div>
         </div>
         <div class="popup" id="project3">
             <div class="popup-content">
@@ -210,10 +210,10 @@
                 <img src="personal projects/smart helth watch/smart health watch.jpg" alt="Smart Health Watch Project">
                 <p>Built a wearable device that monitors patient health and sends updates to doctors for timely intervention.</p>
                 <p>Tools:</p>
-                <div class="tools">
-                    <img src="my skills img/python.jpeg" alt="Python" class="tool-icon">
-                    <img src="personal projects/tools/raspberry py.png" alt="Raspberry Pi" class="tool-icon">
-                </div>
+                <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                  <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+            </div>
                 <a href="path/to/your/smart_health_watch.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/smart-health-watch" target="_blank">Visit GitHub</a>
             </div>
@@ -223,10 +223,10 @@
         <div class="project-box" onclick="togglePopup('project4')">
             <img src="personal projects/food website/main.png" alt="Food Website Project">
             <h3>FOOD WEBSITE</h3>
-            <div class="tools">
-                <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
-            </div>
+            <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+           </div>
         </div>
         <div class="popup" id="project4">
             <div class="popup-content">
@@ -235,10 +235,10 @@
                 <img src="personal projects/food website/1.png" alt="Food Website Project">
                 <p>Designed a user-friendly platform for ordering meals, with an added feature for making food donations.</p>
                 <p>Tools:</p>
-                <div class="tools">
-                    <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                    <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
-                </div>
+                <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                  <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                  <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+              </div>
                 <a href="personal projects/food website/food website final review.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/food-website" target="_blank">Visit GitHub</a>
             </div>
@@ -248,10 +248,10 @@
         <div class="project-box" onclick="togglePopup('project5')">
             <img src="personal projects/multiband patch anteena/anteena main.png" alt="Multiband Patch Project">
             <h3>MULTIBAND PATCH</h3>
-            <div class="tools">
-                <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
-            </div>
+            <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+           </div>
         </div>
         <div class="popup" id="project5">
             <div class="popup-content">
@@ -260,10 +260,10 @@
                 <img src="personal projects/multiband patch anteena/3.png" alt="Multiband Patch Project">
                 <p>Engineered a multiband antenna to operate across various frequency ranges using advanced patch designs.</p>
                 <p>Tools:</p>
-                <div class="tools">
-                    <img src="path/to/your/tool1_icon.png" alt="Tool 1" class="tool-icon">
-                    <img src="path/to/your/tool2_icon.png" alt="Tool 2" class="tool-icon">
-                </div>
+                <div class="tools" style="display: flex; justify-content: center; align-items: center;">
+                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+           </div>
                 <a href="personal projects/multiband patch anteena/Major 8th sem ANKIT.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/multiband-patch" target="_blank">Visit GitHub</a>
             </div>
