--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h3>INDITECH</h3>
             <div class="tools" style="display: flex; justify-content: center; align-items: center;">
                  <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
-                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/raspberry py.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
            </div>
 
         </div>
@@ -174,7 +174,7 @@
             <img src="personal projects/parking indicator/Parking indicator.png" alt="Parking Indicator Project">
             <h3>PARKING INDICATOR</h3>
             <div class="tools" style="display: flex; justify-content: center; align-items: center;">
-                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/raspberry py.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
                  <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
            </div>
         </div>
@@ -200,6 +200,7 @@
             <h3>SMART HEALTH WATCH</h3>
             <div class="tools" style="display: flex; justify-content: center; align-items: center;">
                  <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                <img src="my skills img/python.jpeg" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
                  <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
            </div>
         </div>
@@ -224,8 +225,10 @@
             <img src="personal projects/food website/main.png" alt="Food Website Project">
             <h3>FOOD WEBSITE</h3>
             <div class="tools" style="display: flex; justify-content: center; align-items: center;">
-                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
-                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="my skills img/python.jpeg" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                <img src="personal projects/tools/html.jpeg" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                <img src="personal projects/tools/js.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/css.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
            </div>
         </div>
         <div class="popup" id="project4">
@@ -236,8 +239,10 @@
                 <p>Designed a user-friendly platform for ordering meals, with an added feature for making food donations.</p>
                 <p>Tools:</p>
                 <div class="tools" style="display: flex; justify-content: center; align-items: center;">
-                  <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
-                  <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                  <img src="personal projects/tools/html.jpeg" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                    <img src="personal projects/tools/js.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                    <img src="my skills img/python.jpeg" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                  <img src="personal projects/tools/css.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
               </div>
                 <a href="personal projects/food website/food website final review.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/food-website" target="_blank">Visit GitHub</a>
@@ -249,8 +254,8 @@
             <img src="personal projects/multiband patch anteena/anteena main.png" alt="Multiband Patch Project">
             <h3>MULTIBAND PATCH</h3>
             <div class="tools" style="display: flex; justify-content: center; align-items: center;">
-                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
-                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/ansys.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/anteena.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
            </div>
         </div>
         <div class="popup" id="project5">
@@ -261,8 +266,8 @@
                 <p>Engineered a multiband antenna to operate across various frequency ranges using advanced patch designs.</p>
                 <p>Tools:</p>
                 <div class="tools" style="display: flex; justify-content: center; align-items: center;">
-                 <img src="personal projects/tools/sensors.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
-                 <img src="personal projects/tools/arudino.webp" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/ansys.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
+                 <img src="personal projects/tools/anteena.png" style="width: 30px; height: 30px;" alt="tool-icon" class="tool-icon">
            </div>
                 <a href="personal projects/multiband patch anteena/Major 8th sem ANKIT.pdf" download>Download PDF</a>
                 <a href="https://github.com/yourusername/multiband-patch" target="_blank">Visit GitHub</a>
