--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="intro-section">
         <div class="intro-content">
             <div class="profile-pic-container">
-                <img src="intro section images/left t0p.jpg" alt="Profile Picture" class="profile-pic">
+                <img src="intro section images/one more tryc.jpg" alt="Profile Picture" class="profile-pic">
             </div>
             <h2 class="gradient-text">GURRAM ANKIT</h2>
             <p class="description"><strong>AI Enthusiast </strong>| <strong>Machine Learning </strong>| <strong>Electronics Engineer</strong></p>
