--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="intro section images/second.jpg" alt="Profile Picture" class="profile-pic">
             </div>
             <h2 class="gradient-text">GURRAM ANKIT</h2>
-            <p class="description"><strong>AI Enthusiast </strong>| <strong>Machine Learning </strong>| <strong>Electronics Engineer</strong></p>
+            <p id="desc" class="description"><strong>AI Enthusiast </strong>| <strong>Machine Learning </strong>| <strong>Electronics Engineer</strong></p>
             <button class="portfolio-btn" onclick="scrollToSection('#about-section')">Enter Portfolio</button>
         </div>
     </section>
