--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="intro-section">
         <div class="intro-content">
             <div class="profile-pic-container">
-                <img src="intro section images/second.jpg" alt="Profile Picture" class="profile-pic">
+                <img src="about section img/IMG-20231228-WA0030.jpg" alt="Profile Picture" class="profile-pic">
             </div>
             <h2 class="gradient-text">GURRAM ANKIT</h2>
             <p id="desc" class="description"><strong>AI Enthusiast </strong>| <strong>Machine Learning </strong>| <strong>Electronics Engineer</strong></p>
