--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="header-left">
-            <h1>GURRAM ANKIT PORTFOLIO</h1>
-        </div>
         <nav class="navbar">
-            <ul>
+            <div class="navbar-left">
+                <h2><a href="#home">Portfolio</a></h2> <!-- Changed to only "Portfolio" -->
+            </div>
+            <ul class="navbar-right">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -22,6 +22,8 @@
             </ul>
         </nav>
     </header>
+</body>
+
 
     <section class="intro-section">
         <div class="intro-content">
