--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-left">
-                <h2><a href="#home">Portfolio</a></h2> <!-- Changed to only "Portfolio" -->
+                <h2><a href="#home">GURRAM ANKIT</a></h2> <!-- Changed to only "Portfolio" -->
             </div>
             <ul class="navbar-right">
                 <li><a href="#about">About</a></li>
